# wallpaper-engine-for-macos

./: .gitmodules  Cargo.toml  README.md  flake.nix  result
.github/workflows/: build.yml  release.yml  rust-lint.yml
app/WallpaperEngine/: AppDelegate.swift
app/WallpaperEngine.xcodeproj/: project.pbxproj
app/WallpaperEngine/Resources/: Localizable.xcstrings
app/WallpaperEngine/Services/: UpdateChecker.swift
app/WallpaperEngine/ViewModels/: BridgeStore.swift
app/WallpaperEngine/Views/ControlPanel/: ControlPanelView.swift
app/WallpaperEngine/Views/DisplayInformation/: DisplayInformationView.swift
app/WallpaperEngine/Views/Settings/: AboutSection.swift  DisplaySettingsSection.swift  PowerSettingsSection.swift  ProgramSettingsSection.swift  SettingsView.swift
app/WallpaperEngine/Views/Wallpaper/: DisplayConfigurationSection.swift  GeneralConfigurationSection.swift  WallpaperOptionsEditorView.swift  WallpaperPropertiesSection.swift
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  logging.rs  paths.rs  power.rs
crates/bridge/src/actor/: bridge.rs  messages.rs  snapshots.rs  state.rs
crates/bridge/src/api/: mod.rs  types.rs
crates/bridge/src/config/: app.rs  mod.rs  wallpaper.rs
crates/bridge/src/engine/: activation.rs  facade.rs  mod.rs
crates/bridge/src/state/: drafts.rs
crates/bridge/src/tests/: activation_plan.rs  apply_options.rs  bridge_intents.rs  mod.rs  playback.rs  power_settings.rs  settings_intents.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  window.rs
crates/core/src/display/: state.rs
crates/core/src/engine/: actor.rs  messages.rs  mod.rs  runtime.rs  state.rs
crates/core/src/media/audio/: mod.rs
crates/core/src/owe/: backend.rs
crates/core/src/project/: scene.rs
crates/core/src/tests/general/: audio_capture.rs
crates/shader/: Cargo.toml
crates/shader/src/: lib.rs
crates/shader/src/backend/naga/: compiler.rs  reflector.rs
crates/shader/src/compat/ffi/: abi.rs  callbacks.rs  diagnostics_json.rs  handles.rs  request_json.rs  response_json.rs  tests.rs
crates/shader/src/error/: diagnostic.rs  mod.rs  report.rs  span.rs
crates/shader/src/layout/: mod.rs
crates/shader/src/legalizer/: context.rs  emission.rs  expressions.rs  fixups.rs  mod.rs  tokens.rs
crates/shader/src/legalizer/declarations/: functions.rs  interface.rs  layout.rs  mod.rs  resources.rs  types.rs
crates/shader/src/legalizer/declarators/: functions.rs  mod.rs  parameters.rs  scoped.rs  types.rs
crates/shader/src/legalizer/policies/: alpha_to_coverage.rs  compat_functions.rs  fragment_output.rs  hlsl_mul.rs  legacy_builtins.rs  legacy_types.rs  mod.rs  mutable_inputs.rs  scalar_texture.rs  texture_sampling.rs
crates/shader/src/legalizer/policies/array_parameters/: calls.rs  mod.rs  scopes.rs  signatures.rs  specialization.rs
crates/shader/src/legalizer/policies/control_flow_coercion/: bool_coercion.rs  expr.rs  for_bounds.rs  int_initializer.rs  int_step.rs  mod.rs  statements.rs  symbols.rs
crates/shader/src/legalizer/policies/control_flow_coercion/modulo/: mod.rs  operands.rs  rewrite.rs  typing.rs
crates/shader/src/legalizer/policies/reserved_identifiers/: functions.rs  locals.rs  mod.rs  mod_function.rs  scalar.rs
crates/shader/src/legalizer/policies/type_coercion/: assignment.rs  binary.rs  calls.rs  initializer.rs  mod.rs  texture.rs  types.rs
crates/shader/src/lexer/: mod.rs
crates/shader/src/metadata/: annotation_json.rs  builder.rs  extractor.rs  mod.rs
crates/shader/src/model/: compiled.rs  identifiers.rs  metadata.rs  mod.rs  request.rs  stage.rs  traits.rs
crates/shader/src/pipeline/: cache.rs  context.rs  inputs.rs  interface.rs  metadata.rs  mod.rs  reflection.rs  resources.rs  stage.rs
crates/shader/src/preprocess/: conditionals.rs  context.rs  directives.rs  macros.rs  mod.rs  stage.rs
crates/shader/src/property/: mod.rs
crates/shader/src/source/: mod.rs
crates/shader/src/syntax/: context.rs  declaration.rs  directive.rs  function.rs  mod.rs  module.rs  parser.rs  source.rs
crates/shader/tests/: api_model.rs  legalize.rs  legalize_type_coercion.rs  lexer.rs  metadata.rs  naga_compile.rs  pipeline.rs  preprocess.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
