[workspace]
members = [
    "crates/core",
    "crates/bridge",
    "crates/shader",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-2.0-only"

[workspace.dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unused_results = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "deny"
dbg_macro = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
