[package]
name = "wallpaper-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
arc-swap = "1.9.1"
ash = { version = "0.38", features = ["linked"] }
ffmpeg-next = "8.1.0"
kameo = "0.20.0"
libc = "0.2"
log = { workspace = true }
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-audio = "0.3.2"
objc2-core-audio-types = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-io-surface = "0.3.2"
objc2-quartz-core = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shader = { path = "../shader", features = ["ffi"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-channel = "2"
block2 = "0.6.2"
crossbeam-queue = "0.3"
dispatch2 = { version = "0.3", default-features = false, features = ["alloc"] }


[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[build-dependencies]
cmake = "0.1.58"
bindgen = "0.72.1"
